k8s-msgraph.yml
apiVersion: v1
kind: Service
metadata:
  name: msgraphapi
  namespace: default
  labels:
    app: msgraphapi
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
  selector:
    app: msgraphapi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msgraphapi
  namespace: default
  labels:
    app: msgraphapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: msgraphapi
  template:
    metadata:
      labels:
        app: msgraphapi
    spec:
      containers:
      - name: msgraphapi
        image: hemantksingh/msgraphapi:latest
        volumeMounts:
        - name: secrets
          mountPath: /app/secrets # application secrets path in the container to which the volume gets mounted
          readOnly: true
        imagePullPolicy: Always
      volumes:
      - name: secrets
        secret:
          secretName: msgraphapi-secrets

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: azuread
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # Enable client certificate authentication
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: "default/local-ca"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
spec:
  rules:
  - host: 51.124.13.153.nip.io
    http:
      paths:
      - path: /azuread
        backend:
          serviceName: msgraphapi
          servicePort: 80
  tls:
   - hosts:
     - 51.124.13.153.nip.io
     secretName: 51.124.13.153.nip.io-trusted-tls
